--- a/src/org/oop/view/ModalAddInsegnamento.form
+++ b/src/org/oop/view/ModalAddInsegnamento.form
@@ -33,7 +33,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Conferma"/>
+                  <text value="Aggiungi"/>
                 </properties>
               </component>
               <component id="e0610" class="javax.swing.JButton" binding="annullaButton" default-binding="true">
@@ -41,7 +41,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Annulla"/>
+                  <text value="Chiudi"/>
                 </properties>
               </component>
             </children>
