--- a/src/org/oop/view/segreteria/Tirocinio.form
+++ b/src/org/oop/view/segreteria/Tirocinio.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.Tirocinio">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.segreteria.Tirocinio">
   <grid id="27dc6" binding="tirociniopanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="40" left="15" bottom="40" right="15"/>
     <constraints>
