--- a/src/org/oop/view/agenda/FormAttivita.form
+++ b/src/org/oop/view/agenda/FormAttivita.form
@@ -52,7 +52,7 @@
           </component>
         </children>
       </grid>
-      <grid id="5789c" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="5789c" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="5" left="5" bottom="5" right="5"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -105,7 +105,7 @@
               <text value="Data:"/>
             </properties>
           </component>
-          <component id="468f5" class="javax.swing.JFormattedTextField" binding="datafield">
+          <component id="468f5" class="javax.swing.JFormattedTextField" binding="dataField" custom-create="true">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="150" height="-1"/>
@@ -113,6 +113,15 @@
               </grid>
             </constraints>
             <properties/>
+          </component>
+          <component id="db5e" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-6381922"/>
+              <text value="(la data deve essere nel formato gg-mm-aaaa)"/>
+            </properties>
           </component>
         </children>
       </grid>
