--- a/src/org/oop/view/profilo/Profilo.form
+++ b/src/org/oop/view/profilo/Profilo.form
@@ -16,7 +16,7 @@
         </constraints>
         <properties>
           <background color="-1907998"/>
-          <dividerLocation value="200"/>
+          <dividerLocation value="260"/>
           <dividerSize value="0"/>
         </properties>
         <border type="none"/>
@@ -51,7 +51,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <grid id="91f4" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="91f4" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="5" left="5" bottom="5" right="5"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -64,60 +64,144 @@
                       <color awt-color="gray"/>
                     </border>
                     <children>
-                      <component id="7151b" class="javax.swing.JLabel">
+                      <grid id="91af5" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                        <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <foreground awt-color="darkGray"/>
-                          <text value="Nome:"/>
+                          <background color="-1907998"/>
                         </properties>
-                      </component>
-                      <component id="5c919" class="javax.swing.JLabel">
-                        <constraints>
-                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <foreground awt-color="darkGray"/>
-                          <text value="Matricola:"/>
-                        </properties>
-                      </component>
-                      <component id="eee7b" class="javax.swing.JLabel">
-                        <constraints>
-                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <foreground awt-color="darkGray"/>
-                          <text value="Email:"/>
-                        </properties>
-                      </component>
-                      <component id="20a08" class="javax.swing.JLabel">
-                        <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <foreground awt-color="darkGray"/>
-                          <text value="Cognome:"/>
-                        </properties>
-                      </component>
-                      <component id="5ef58" class="javax.swing.JLabel">
-                        <constraints>
-                          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <foreground awt-color="darkGray"/>
-                          <text value="Corso di laurea:"/>
-                        </properties>
-                      </component>
-                      <component id="3cb7b" class="javax.swing.JLabel">
-                        <constraints>
-                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <foreground awt-color="darkGray"/>
-                          <text value="Tipo di corso:"/>
-                        </properties>
-                      </component>
+                        <border type="none"/>
+                        <children>
+                          <component id="7151b" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <foreground awt-color="darkGray"/>
+                              <text value="Nome:"/>
+                            </properties>
+                          </component>
+                          <component id="5c919" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <foreground awt-color="darkGray"/>
+                              <text value="Matricola:"/>
+                            </properties>
+                          </component>
+                          <component id="eee7b" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <foreground awt-color="darkGray"/>
+                              <text value="Email:"/>
+                            </properties>
+                          </component>
+                          <component id="20a08" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <foreground awt-color="darkGray"/>
+                              <text value="Cognome:"/>
+                            </properties>
+                          </component>
+                          <component id="1e0ef" class="javax.swing.JLabel" binding="userMatricolaField">
+                            <constraints>
+                              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <font style="1"/>
+                              <foreground awt-color="black"/>
+                              <text value="Label"/>
+                            </properties>
+                          </component>
+                          <component id="71218" class="javax.swing.JLabel" binding="userEmailField">
+                            <constraints>
+                              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <font style="1"/>
+                              <foreground awt-color="black"/>
+                              <text value="Label"/>
+                            </properties>
+                          </component>
+                          <component id="a751a" class="javax.swing.JLabel" binding="userSurnameField">
+                            <constraints>
+                              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <font style="1"/>
+                              <foreground awt-color="black"/>
+                              <text value="Label"/>
+                            </properties>
+                          </component>
+                          <component id="4e9ff" class="javax.swing.JLabel" binding="userNameField">
+                            <constraints>
+                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <font style="1"/>
+                              <foreground awt-color="black"/>
+                              <text value="Label"/>
+                            </properties>
+                          </component>
+                          <grid id="80913" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                            <margin top="15" left="0" bottom="0" right="0"/>
+                            <constraints>
+                              <grid row="4" column="0" row-span="3" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <background color="-1907998"/>
+                            </properties>
+                            <border type="none"/>
+                            <children>
+                              <component id="5ef58" class="javax.swing.JLabel">
+                                <constraints>
+                                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                </constraints>
+                                <properties>
+                                  <foreground awt-color="darkGray"/>
+                                  <text value="Corso di laurea:"/>
+                                </properties>
+                              </component>
+                              <component id="3cb7b" class="javax.swing.JLabel">
+                                <constraints>
+                                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                </constraints>
+                                <properties>
+                                  <foreground awt-color="darkGray"/>
+                                  <text value="Tipo di corso:"/>
+                                </properties>
+                              </component>
+                              <component id="6f9cc" class="javax.swing.JLabel" binding="userTipoCorsoField">
+                                <constraints>
+                                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                </constraints>
+                                <properties>
+                                  <font style="1"/>
+                                  <foreground awt-color="black"/>
+                                  <text value="Label"/>
+                                </properties>
+                              </component>
+                              <component id="4dd13" class="javax.swing.JLabel" binding="userCorsoField">
+                                <constraints>
+                                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                </constraints>
+                                <properties>
+                                  <font style="1"/>
+                                  <foreground awt-color="black"/>
+                                  <text value="Label"/>
+                                </properties>
+                              </component>
+                            </children>
+                          </grid>
+                        </children>
+                      </grid>
                     </children>
                   </grid>
                   <component id="8775e" class="javax.swing.JButton" binding="aggiungiprofilo">
